--- a/touch/vendor.evervolv.touch@1.0-service.oneplus_msmnile.rc
+++ b/touch/vendor.evervolv.touch@1.0-service.oneplus_msmnile.rc
@@ -16,7 +16,7 @@ on boot
     chown system system /proc/touchpanel/letter_w_enable
     chown system system /proc/touchpanel/right_arrow_enable
 
-service vendor.touch-hal-1-0 /vendor/bin/hw/vendor.lineage.touch@1.0-service.oneplus_msmnile
+service vendor.touch-hal-1-0 /vendor/bin/hw/vendor.evervolv.touch@1.0-service.oneplus_msmnile
     class hal
     user system
     group system
