sm8150-common: move dashd to vendor
Change-Id: I86e3ecea2f38bfc08a3f870cc19689aa0d0eb69f

--- a/rootdir/etc/init.qcom.usb.rc
+++ b/rootdir/etc/init.qcom.usb.rc
@@ -58,7 +58,7 @@ on charger
     enable vendor.qcom-usb-sh
     start vendor.qcom-usb-sh
     setprop sys.usb.config mass_storage
-    start dashd
+    start vendor.dashd
 
 on boot
     write /sys/class/android_usb/android0/iSerial ${ro.serialno}
