--- a/gps/etc/gps.conf
+++ b/gps/etc/gps.conf
@@ -3,7 +3,7 @@
 #AUTO    = 1
 #XTRA2   = 2
 #XTRA3   = 3
-XTRA_VERSION_CHECK=0
+XTRA_VERSION_CHECK=1
 
 # Error Estimate
 # _SET = 1
@@ -11,7 +11,7 @@ XTRA_VERSION_CHECK=0
 ERR_ESTIMATE=0
 
 #NTP server
-NTP_SERVER=time.izatcloud.net
+NTP_SERVER=time.xtracloud.net
 
 #XTRA CA path
 XTRA_CA_PATH=/usr/lib/ssl/certs
@@ -19,16 +19,16 @@ XTRA_CA_PATH=/usr/lib/ssl/certs
 # DEBUG LEVELS: 0 - none, 1 - Error, 2 - Warning, 3 - Info
 #               4 - Debug, 5 - Verbose
 # If DEBUG_LEVEL is commented, Android's logging levels will be used
-DEBUG_LEVEL = 3
+DEBUG_LEVEL = 2
 
 # Intermediate position report, 1=enable, 0=disable
 INTERMEDIATE_POS=0
 
-# supl version 1.0
-SUPL_VER=0x10000
+# supl version 2.0
+SUPL_VER=0x20000
 
 # Emergency SUPL, 1=enable, 0=disable
-#SUPL_ES=1
+SUPL_ES=1
 
 #Choose PDN for Emergency SUPL
 #1 - Use emergency PDN
@@ -40,7 +40,7 @@ SUPL_VER=0x10000
 #config.xml.
 #MSA=0X2
 #MSB=0X1
-#SUPL_MODE=
+SUPL_MODE=3
 
 # GPS Capabilities bit mask
 # SCHEDULING = 0x01
@@ -61,10 +61,8 @@ CAPABILITIES=0x17
 # FOR SUPL SUPPORT, set the following
 # SUPL_HOST=supl.host.com or IP
 # SUPL_PORT=1234
-
-# FOR MO SUPL SUPPORT, set the following
-# MO_SUPL_HOST=supl.host.com or IP
-# MO_SUPL_PORT=1234
+SUPL_HOST=supl.google.com
+SUPL_PORT=7275
 
 # FOR C2K PDE SUPPORT, set the following
 # C2K_HOST=c2k.pde.com or IP
@@ -286,14 +284,5 @@ PROXY_APP_PACKAGE_NAME = com.google.android.carrierlocation
 # CP_MTLR_ES
 #####################################
 # CP MTLR ES, 1=enable, 0=disable
-CP_MTLR_ES=0
+CP_MTLR_ES=1
 
-##################################################
-# GNSS_DEPLOYMENT
-##################################################
-# 0 : Enable QTI GNSS (default)
-# 1 : Enable QCSR SS5
-# This setting use to select between QTI GNSS
-# and QCSR SS5 hardware receiver.
-# By default QTI GNSS receiver is enabled.
-# GNSS_DEPLOYMENT = 0
