--- a/gps/etc/gps.conf
+++ b/gps/etc/gps.conf
@@ -3,7 +3,7 @@
 #AUTO    = 1
 #XTRA2   = 2
 #XTRA3   = 3
-XTRA_VERSION_CHECK=1
+XTRA_VERSION_CHECK=0
 
 # Error Estimate
 # _SET = 1
@@ -11,7 +11,7 @@ XTRA_VERSION_CHECK=1
 ERR_ESTIMATE=0
 
 #NTP server
-NTP_SERVER=time.xtracloud.net
+NTP_SERVER=time.izatcloud.net
 
 #XTRA CA path
 XTRA_CA_PATH=/usr/lib/ssl-1.1/certs
@@ -24,11 +24,11 @@ DEBUG_LEVEL = 2
 # Intermediate position report, 1=enable, 0=disable
 INTERMEDIATE_POS=0
 
-# supl version 2.0
-SUPL_VER=0x20000
+# supl version 1.0
+SUPL_VER=0x10000
 
 # Emergency SUPL, 1=enable, 0=disable
-SUPL_ES=1
+#SUPL_ES=1
 
 #Choose PDN for Emergency SUPL
 #1 - Use emergency PDN
@@ -40,7 +40,7 @@ SUPL_ES=1
 #config.xml.
 #MSA=0X2
 #MSB=0X1
-SUPL_MODE=3
+#SUPL_MODE=
 
 # GPS Capabilities bit mask
 # SCHEDULING = 0x01
@@ -61,8 +61,10 @@ CAPABILITIES=0x17
 # FOR SUPL SUPPORT, set the following
 # SUPL_HOST=supl.host.com or IP
 # SUPL_PORT=1234
-SUPL_HOST=supl.google.com
-SUPL_PORT=7275
+
+# FOR MO SUPL SUPPORT, set the following
+# MO_SUPL_HOST=supl.host.com or IP
+# MO_SUPL_PORT=1234
 
 # FOR C2K PDE SUPPORT, set the following
 # C2K_HOST=c2k.pde.com or IP
@@ -294,7 +296,7 @@ MODEM_TYPE = 1
 # 1 : enabled
 # This setting enables GPS engine to estimate clock
 # bias and drift when the signal from at least 1
-# SV is available and the UEs position is known by
+# SV is available and the UE’s position is known by
 # other position engines.
 #POSITION_ASSISTED_CLOCK_ESTIMATOR_ENABLED = 0
 
@@ -309,7 +311,7 @@ PROXY_APP_PACKAGE_NAME = com.google.android.carrierlocation
 # CP_MTLR_ES
 #####################################
 # CP MTLR ES, 1=enable, 0=disable
-CP_MTLR_ES=1
+CP_MTLR_ES=0
 
 ##################################################
 # GNSS_DEPLOYMENT
@@ -340,3 +342,4 @@ D_LEVEL_TIME_DEPTH = 30
 D_LEVEL_MAX_CAPACITY = 300
 V_LEVEL_TIME_DEPTH = 200
 V_LEVEL_MAX_CAPACITY = 400
+
