--- a/rootdir/etc/init.qcom.usb.rc
+++ b/rootdir/etc/init.qcom.usb.rc
@@ -1,4 +1,4 @@
-# Copyright (c) 2011-2016, 2018-2019 The Linux Foundation. All rights reserved.
+# Copyright (c) 2011-2016, 2018 The Linux Foundation. All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
@@ -26,11 +26,22 @@
 #
 
 on charger
+    setprop ro.board.platform msmnile
+    start qcom-post-boot
+    write /sys/module/msm_thermal/core_control/cpus_offlined 254
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1248000
+    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq 1267200
+    write /sys/devices/system/cpu/cpu1/online 0
+    write /sys/devices/system/cpu/cpu2/online 0
+    write /sys/devices/system/cpu/cpu3/online 0
+    write /sys/devices/system/cpu/cpu5/online 0
+    write /sys/devices/system/cpu/cpu6/online 0
+    write /sys/devices/system/cpu/cpu7/online 0
     mkdir /dev/usb-ffs 0770 shell shell
     mkdir /dev/usb-ffs/adb 0770 shell shell
     mount configfs none /config
     mkdir /config/usb_gadget/g1 0770 shell shell
-    mkdir /config/usb_gadget/g1/strings/0x409 0770
+    mkdir /config/usb_gadget/g1/strings/0x409 0770 shell shell
     write /config/usb_gadget/g1/bcdUSB 0x0200
     write /config/usb_gadget/g1/os_desc/use 1
     write /config/usb_gadget/g1/strings/0x409/serialnumber ${ro.serialno}
@@ -47,6 +58,7 @@ on charger
     enable vendor.qcom-usb-sh
     start vendor.qcom-usb-sh
     setprop sys.usb.config mass_storage
+    start vendor.dashd
 
 on boot
     write /sys/class/android_usb/android0/iSerial ${ro.serialno}
@@ -113,13 +125,15 @@ service vendor.qcom-usb-sh /vendor/bin/init.qcom.usb.sh
     oneshot
     disabled
 
-on property:persist.vendor.usb.config=*
-    setprop persist.sys.usb.config ${persist.vendor.usb.config}
+#BSP disable default full port config hide the full port in factory mode *#801#
+#on property:persist.vendor.usb.config=*
+#    setprop persist.sys.usb.config ${persist.vendor.usb.config}
+
+#BSP add for 5G diag port
+on property:persist.vendor.sdx50m.online=*
+    setprop persist.sys.sdx50m.online ${persist.vendor.sdx50m.online}
 
 on boot && property:ro.boot.usbconfigfs=true
-        setprop sys.usb.configfs 1
-
-on property:vendor.usb.configfs=1 && property:sys.usb.configfs=0
         setprop sys.usb.configfs 1
 
 # Following are the parameters required for usb functionality. They provide configurable options like
