--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -46,6 +46,9 @@ on init
     wait /dev/block/platform/soc/1d84000.ufshc
     symlink /dev/block/platform/soc/1d84000.ufshc /dev/block/bootdevice
 
+on late-init
+    setprop vendor.powerhal.config "powerhint.json"
+
 on early-fs
     start vold
 
