--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -78,9 +78,10 @@ on post-fs-data
     mkdir /data/vendor/hbtp 0750 system system
     mkdir /data/vendor/nnhal 0700 system system
 
-on boot
+on early-boot
     start vendor.sensors
 
+on boot
     # For cpusets initialize for Silver Only first and then Silver + Gold
     # Silver Only configuration cannot work with 0-7
     chown system system /sys/kernel/hbtp/display_pwr
